--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ src="https://www.facebook.com/tr?id=944218417170643&ev=PageView&noscript=1"
       };
 
       const changeTheExternalUrl = () => {
-        return "https://form.jotform.com/250636684285163";
+        return "https://frenchiesvseverybody.github.io/FvEGame2/";
       };
 
       const playVideoComponent = {
